Agent query: Please verify the following aspects of the Graph Algorithm Visualization tool: 1. Can you generate a random graph using the 'Generate Random Graph' button? 2. Are you able to add and remove nodes and edges using the respective buttons? 3. Can you run both BFS and DFS algorithms, and do you see the step-by-step visualization of the algorithm's progress? 4. Is there a speed control slider, and does it affect the animation speed? 5. Is the user interface clear and intuitive? 6. Does the layout adapt well to different screen sizes (try resizing your browser window)?

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,8 @@
                 <option value="dfs">Depth-First Search (DFS)</option>
             </select>
             <button id="run-algorithm">Run Algorithm</button>
+            <label for="animation-speed">Animation Speed:</label>
+            <input type="range" id="animation-speed" min="1" max="10" value="5">
         </div>
         <canvas id="graph-canvas"></canvas>
     </main>
