--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
             <input type="range" id="animation-speed" min="1" max="10" value="5">
         </div>
         <canvas id="graph-canvas"></canvas>
+        <div id="algorithm-result"></div>
     </main>
     <script src="{{ url_for('static', filename='js/graph.js') }}"></script>
     <script src="{{ url_for('static', filename='js/algorithms.js') }}"></script>
